fix horizontal scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 /* For Webkit browsers like Chrome, Safari */
 ::-webkit-scrollbar {
   width: 0.20rem;
+  height: 0;
 }
 
 ::-webkit-scrollbar-track {
@@ -25,4 +26,10 @@
 * {
   scrollbar-width: thin;
   scrollbar-color: #888 #f1f1f1;
+}
+
+/* Hide scrollbar corner */
+::-webkit-scrollbar-corner {
+  background: none;
+  width: 0;
 }
